--- a/backend/package.json
+++ b/backend/package.json
@@ -3,5 +3,18 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.1"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
