--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@ionic/react": "^7.2.0",
     "@material-tailwind/react": "^2.0.4",
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "js-sha256": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ionicons": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3",
