--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "^1.0.6",
     "@ionic/react": "^7.2.0",
     "@material-tailwind/react": "^2.0.4",
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "js-sha256": "^0.9.0",
+    "next": "^13.4.12",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-ionicons": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
@@ -27,6 +29,8 @@
     "sha256": "^0.2.0"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
+    "@types/node": "^20.4.4",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.0",
